Fixing last, hopefully, of spacing issues with imported images

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -5964,7 +5964,8 @@ figure.half-image-left-full {
 figure.align-right,
 figure.align-left,
 figure.align-center,
-figure[class="embedded-entity"] {
+figure[class="embedded-entity"],
+figure[class="image"] {
   margin: 40px;
   margin-top: 0;
   margin-bottom: 32px;
@@ -5972,7 +5973,8 @@ figure[class="embedded-entity"] {
   figure.align-right figcaption,
   figure.align-left figcaption,
   figure.align-center figcaption,
-  figure[class="embedded-entity"] figcaption {
+  figure[class="embedded-entity"] figcaption,
+  figure[class="image"] figcaption {
     display: table-caption;
     caption-side: bottom; }
 
@@ -5983,11 +5985,13 @@ figure.align-left {
   margin-left: 0; }
 
 figure.align-center,
-figure[class="embedded-entity"] {
+figure[class="embedded-entity"],
+figure[class="image"] {
   margin-left: 0;
   margin-right: 0; }
 
-figure figure[class="embedded-entity"] {
+figure figure[class="embedded-entity"],
+figure figure[class="image"] {
   margin: 0; }
 
 .video.article-full-width {
