--- a/docroot/themes/custom/ucsf/scss/node/_node-article.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-article.scss
@@ -232,7 +232,8 @@ figure.half-image-left-full {
 figure.align-right,
 figure.align-left,
 figure.align-center,
-figure[class="embedded-entity"] {
+figure[class="embedded-entity"],
+figure[class="image"] {
   margin: $space-five;
   margin-top: 0;
   margin-bottom: $space-quadruple;
@@ -253,12 +254,14 @@ figure.align-left {
 }
 
 figure.align-center,
-figure[class="embedded-entity"] {
+figure[class="embedded-entity"],
+figure[class="image"] {
   margin-left: 0;
   margin-right: 0;
 }
 
-figure figure[class="embedded-entity"] {
+figure figure[class="embedded-entity"],
+figure figure[class="image"] {
   margin: 0;
 }
 
